history feture added

--- a/templates/app.html
+++ b/templates/app.html
@@ -19,6 +19,7 @@
     <header>
         <h2 class="logo">AI-POWERED CROP DISEASE ANALYSIS</h2>
         <div class="language-select" id="google_translate_element"></div>
+        <a href="/history" style="text-decoration: none; margin-right: 200px" class="btn btn-primary">History</a>
     </header>
 
     <main>
